--- a/app/src/main/res/layout/activity_busca_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_busca_estabelecimento.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-    android:iconifiedByDefault >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/fundo_degrade">
+
+    <ProgressBar
+        android:id="@+id/pbProgresso"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+    </ProgressBar>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,7 +30,9 @@
         <ListView
             android:id="@+id/lvBuscaEsta"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:padding="8dp" />
 
     </LinearLayout>
+
 </RelativeLayout>
