--- a/app/src/main/res/layout/activity_lista_servicos.xml
+++ b/app/src/main/res/layout/activity_lista_servicos.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
+
     <include
         android:id="@+id/tbBuscaServicos"
-        layout="@layout/toolbar">
-    </include>
+        layout="@layout/toolbar"></include>
 
-    <ListView
-        android:id="@+id/lvEstaServicoBusca"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tbBuscaServicos" />
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/lvEstaServicoBusca"
+            android:layout_width="match_parent"
+            android:layout_height="514dp"
+            android:layout_below="@+id/tbBuscaServicos" />
+
+        <Button
+            android:id="@+id/btnFiltroServico"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Filtro" />
+    </LinearLayout>
+
 </RelativeLayout>
