Correção da exibição das avaliações, Correção da exibição das informações referentes ao estabelecimento (endereço), inserção da geolocalização do estabelecimento.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="slategrey">#708090</color>
     <color name="grey2">#606060</color>
     <color name="colorAccent">#AAAAAA</color>
+    <color name="black">#000000</color>
 </resources>
