--- a/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,6 +26,155 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvExibeNomeEstabelecimento"
+                android:layout_width="210dp"
+                android:layout_height="wrap_content"
+                android:text="Estabelecimento"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold" />
+
+            <ImageButton
+                android:id="@+id/botao_mostrar_avaliacoes_estabelecimento"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/ic_action_avaliacoes" />
+
+            <View
+                android:layout_width="5dp"
+                android:layout_height="50dp" />
+
+            <ImageButton
+                android:id="@+id/botao_avaliar_estabelecimento"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/ic_action_avaliar" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="330dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvEmail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/email"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="normal" />
+
+            <TextView
+                android:id="@+id/tvExibeEmailEstabelecimentor"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Email"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvTelefone"
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/telefone"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textStyle="normal" />
+
+                <TextView
+                    android:id="@+id/tvCpfCnpj"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
+                    android:text="@string/cpf_cnpj"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textStyle="normal" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvExibeTelefoneEstabelecimento"
+                    android:layout_width="135dp"
+                    android:layout_height="wrap_content"
+                    android:text="Telefone"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvExibeCpfCnpjEstabelecimento"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
+                    android:text="CPF/CNPJ"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tvHorario"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/horario"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="normal" />
+
+            <TextView
+                android:id="@+id/tvExibeHorarioEstabelecimento"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Horario"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvEnderecoEstabelecimento"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Endereço"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="normal" />
+
+            <TextView
+                android:id="@+id/tvEnderecoEstabelecimentoCombinado"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Endereco"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold" />
+
+            <com.google.android.gms.maps.MapView
+                android:id="@+id/map_view"
+                android:layout_width="match_parent"
+                android:layout_height="130dp"
+                android:layout_weight="2"
+                map:liteMode="true" />
+
+            <TextView
+                android:id="@+id/tvServicos"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/servicos"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
         <ScrollView
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
@@ -35,166 +185,17 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginTop="2dp" />
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent">
-
-                <TextView
-                    android:id="@+id/tvEstabelecimento"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
-                    android:text="@string/estabelecimento"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textStyle="normal" />
-                <Button
-                android:id="@+id/botao_mostrar_avaliacoes_estabelecimento"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/avaliacoes" />
-                <Button
-                    android:id="@+id/botao_avaliar_estabelecimento"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/avaliar" />
-            </LinearLayout>
-
-                <TextView
-                    android:id="@+id/tvExibeNomeEstabelecimento"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Nome"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textStyle="bold" />
-
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginTop="2dp" />
-
-                <TextView
-                    android:id="@+id/tvEmail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/email"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textStyle="normal" />
-                <TextView
-                    android:id="@+id/tvExibeEmailEstabelecimentor"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Email"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textStyle="bold" />
-
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginTop="2dp" />
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent">
-
-                    <TextView
-                        android:id="@+id/tvTelefone"
-                        android:layout_width="130dp"
-                        android:layout_height="wrap_content"
-                        android:text="@string/telefone"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textStyle="normal" />
-
-                    <TextView
-                        android:id="@+id/tvCpfCnpj"
-                        android:paddingLeft="20dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/cpf_cnpj"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textStyle="normal" />
-                </LinearLayout>
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent">
-
-                    <TextView
-                        android:id="@+id/tvExibeTelefoneEstabelecimento"
-                        android:layout_width="135dp"
-                        android:layout_height="wrap_content"
-                        android:text="Telefone"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/tvExibeCpfCnpjEstabelecimento"
-                        android:paddingLeft="20dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="CPF/CNPJ"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textStyle="bold" />
-                </LinearLayout>
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginTop="2dp" />
-                <TextView
-                    android:id="@+id/tvHorario"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/horario"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textStyle="normal" />
-                <TextView
-                    android:id="@+id/tvExibeHorarioEstabelecimento"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Horario"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textStyle="bold" />
-
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginTop="4dp" />
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/tvServicos"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/servicos"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textStyle="bold" />
-
-                    <View
-                        android:layout_width="fill_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginBottom="2dp"
-                        android:layout_marginTop="4dp" />
                     <ListView
                         android:id="@+id/lvListaServicos"
                         android:layout_width="match_parent"
                         android:layout_height="200dp" />
-                </LinearLayout>
 
+                </LinearLayout>
 
 
             </LinearLayout>
