--- a/app/src/main/res/layout/activity_avalicoes_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_avalicoes_estabelecimento.xml
@@ -19,48 +19,35 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/tb_lista_avaliacoes_estabelecimento"
+        android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:orientation="vertical">
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
-            <TextView
-                android:id="@+id/tvEstabelecimentoAvaliacao"
-                android:layout_width="170dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:text="@string/estabelecimento"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textStyle="normal" />
+
             <TextView
                 android:id="@+id/tvExibeNomeEstabelecimentoAvaliacao"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Nome"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold" />
 
-        </LinearLayout>
-        <ScrollView
-            android:id="@+id/scrollView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <LinearLayout
+            <ListView
+                android:id="@+id/lvListaAvaliacoes"
+                android:layout_marginTop="6dp"
+                android:background="@color/black"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="wrap_content" />
 
-                <ListView
-                    android:id="@+id/lvListaAvaliacoes"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp" />
-            </LinearLayout>
-        </ScrollView>
+        </LinearLayout>
+
+
     </LinearLayout>
 </RelativeLayout>
