--- a/app/src/main/res/layout/avaliacao.xml
+++ b/app/src/main/res/layout/avaliacao.xml
@@ -8,6 +8,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:background="@color/grey"
         android:orientation="vertical">
 
         <LinearLayout
@@ -16,15 +21,14 @@
             android:orientation="vertical">
             <TextView
                 android:id="@+id/tvUsuarioAvaliador"
-                android:layout_width="170dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
                 android:text="@string/avaliador"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="normal" />
             <TextView
                 android:id="@+id/tvNomeUsuarioAvaliacaoes"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Nome"
                 android:textAppearance="?android:attr/textAppearanceMedium"
@@ -39,30 +43,30 @@
             android:numStars="5"
             android:layout_gravity="center"
             android:stepSize="1.0"
-            android:rating="0.0" />
+            android:rating="0.0"
+            android:isIndicator="true"
+            />
 
         <TextView
             android:id="@+id/tvComentarioAvaliacoes"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/comentario"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textStyle="bold" />
-        <ScrollView
-            android:id="@+id/scrollView"
-            android:layout_width="match_parent"
-            android:layout_height="254dp">
             <EditText
                 android:id="@+id/etComentarioAvaliacoes"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:ems="10"
                 android:gravity="left|top"
                 android:inputType="textMultiLine"
                 android:background="@color/branco"
                 android:lines="8"
-                android:maxLines="12"
-                android:minLines="12" />
-        </ScrollView>
+                android:scrollbars="vertical"
+                android:maxLines="7"
+                android:minLines="2"
+                android:focusable="false"
+                />
     </LinearLayout>
 </RelativeLayout>
