--- a/app/src/main/res/layout/activity_busca_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_busca_estabelecimento.xml
@@ -30,8 +30,14 @@
         <ListView
             android:id="@+id/lvBuscaEsta"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="462dp"
             android:padding="8dp" />
+
+        <Button
+            android:id="@+id/btnFiltroEstabelecimento"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Filtro" />
 
     </LinearLayout>
 
