--- a/app/src/main/res/layout/tab_servico_fragment.xml
+++ b/app/src/main/res/layout/tab_servico_fragment.xml
@@ -10,7 +10,7 @@
         <GridView
             android:id="@+id/gridServicos"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="500dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:columnWidth="100dp"
