--- a/app/src/main/res/layout/lista_servicos_busca.xml
+++ b/app/src/main/res/layout/lista_servicos_busca.xml
@@ -3,46 +3,60 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_marginTop="15dp">
+    <ImageView
+        android:id="@+id/ivPetServicoBusca"
+        android:layout_width="100dp"
+        android:layout_height="80dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_weight="1"
+        app:srcCompat="@drawable/tipo_pet_gato" />
 
-        <TextView
-            android:id="@+id/tvExibirServico"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView"
-            android:textColor="@color/colorSecondaryText"
-            android:textSize="16sp" />
+    <TextView
+        android:id="@+id/tvEstabServico"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="15dp"
+        android:layout_toEndOf="@+id/tvExibirServico"
+        android:layout_weight="1"
+        android:text="est"
+        android:textColor="@color/colorSecondaryText"
+        android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/tvEstabServico"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView"
-            android:textColor="@color/colorSecondaryText"
-            android:textSize="16sp" />
+    <TextView
+        android:id="@+id/tvExibirDist"
+        android:layout_width="100dp"
+        android:layout_height="25dp"
+        android:layout_alignBaseline="@+id/tvExibirServicoValor"
+        android:layout_alignBottom="@+id/tvExibirServicoValor"
+        android:layout_toEndOf="@+id/tvExibirServico"
+        android:layout_weight="1"
+        android:text="Distancia"
+        android:textColor="@color/colorSecondaryText"
+        android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/tvExibirServicoValor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView"
-            android:textColor="@color/colorSecondaryText"
-            android:textSize="16sp" />
+    <TextView
+        android:id="@+id/tvExibirServico"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/ivPetServicoBusca"
+        android:layout_weight="1"
+        android:text="Servico"
+        android:textColor="@color/colorSecondaryText"
+        android:textSize="16sp" />
 
-        <ImageView
-            android:id="@+id/ivPetServicoBusca"
-            android:layout_width="63dp"
-            android:layout_height="23dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/tipo_pet_gato" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/tvExibirServicoValor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvExibirServico"
+        android:layout_marginTop="14dp"
+        android:layout_toEndOf="@+id/ivPetServicoBusca"
+        android:layout_weight="1"
+        android:text="Valor"
+        android:textColor="@color/colorSecondaryText"
+        android:textSize="16sp" />
 
 </RelativeLayout>
