--- a/app/src/main/res/layout/tab_opcoes_pet_fragment.xml
+++ b/app/src/main/res/layout/tab_opcoes_pet_fragment.xml
@@ -44,6 +44,12 @@
             android:layout_height="wrap_content"
             android:text="Avaliação" />
 
+        <CheckBox
+            android:id="@+id/cbPreco"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Preço" />
+
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
