modificaçõe no layout de busca servico e na forma de buscar

--- a/app/src/main/res/layout/activity_lista_servicos.xml
+++ b/app/src/main/res/layout/activity_lista_servicos.xml
@@ -8,13 +8,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tbBuscaServicos"
         android:orientation="vertical">
 
         <ListView
             android:id="@+id/lvEstaServicoBusca"
             android:layout_width="match_parent"
-            android:layout_height="520dp"
+            android:layout_height="460dp"
             android:layout_below="@+id/tbBuscaServicos" />
 
         <Button
