--- a/app/src/main/res/layout/lista_servicos_busca.xml
+++ b/app/src/main/res/layout/lista_servicos_busca.xml
@@ -4,56 +4,72 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/ivPetServicoBusca"
+        android:id="@+id/ivServicoBusca"
         android:layout_width="100dp"
         android:layout_height="80dp"
+        android:layout_marginTop="5dp"
+        android:layout_alignBottom="@+id/tvExibirServicoValor"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        app:srcCompat="@drawable/servico_passeio" />
+
+    <ImageView
+        android:id="@+id/ivPetServicoBusca"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignBottom="@+id/tvEstabServico"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="47dp"
         android:layout_weight="1"
         app:srcCompat="@drawable/tipo_pet_gato" />
-
-    <TextView
-        android:id="@+id/tvEstabServico"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="15dp"
-        android:layout_toEndOf="@+id/tvExibirServico"
-        android:layout_weight="1"
-        android:text="est"
-        android:textColor="@color/colorSecondaryText"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/tvExibirDist"
-        android:layout_width="100dp"
-        android:layout_height="25dp"
-        android:layout_alignBaseline="@+id/tvExibirServicoValor"
-        android:layout_alignBottom="@+id/tvExibirServicoValor"
-        android:layout_toEndOf="@+id/tvExibirServico"
-        android:layout_weight="1"
-        android:text="Distancia"
-        android:textColor="@color/colorSecondaryText"
-        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/tvExibirServico"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/ivPetServicoBusca"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_toEndOf="@+id/ivServicoBusca"
         android:layout_weight="1"
         android:text="Servico"
+        android:textColor="@color/colorSecondaryText"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tvEstabServico"
+        android:layout_width="40dp"
+        android:layout_height="15dp"
+        android:layout_below="@+id/tvExibirServico"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="5dp"
+        android:layout_toEndOf="@+id/ivServicoBusca"
+        android:layout_weight="1"
+        android:text="est"
+        android:textColor="@color/colorSecondaryText"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/tvExibirDist"
+        android:layout_width="100dp"
+        android:layout_height="20dp"
+        android:layout_alignBaseline="@+id/tvExibirServicoValor"
+        android:layout_alignBottom="@+id/tvExibirServicoValor"
+        android:layout_marginStart="14dp"
+        android:layout_toEndOf="@+id/tvExibirServico"
+        android:layout_weight="1"
+        android:text="distância"
         android:textColor="@color/colorSecondaryText"
         android:textSize="16sp" />
 
     <TextView
         android:id="@+id/tvExibirServicoValor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvExibirServico"
-        android:layout_marginTop="14dp"
-        android:layout_toEndOf="@+id/ivPetServicoBusca"
+        android:layout_width="100dp"
+        android:layout_height="20dp"
+        android:layout_alignStart="@+id/tvExibirServico"
+        android:layout_below="@+id/tvEstabServico"
+        android:layout_toStartOf="@+id/tvExibirDist"
         android:layout_weight="1"
         android:text="Valor"
         android:textColor="@color/colorSecondaryText"
