--- a/app/src/main/res/layout/activity_busca_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_busca_estabelecimento.xml
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:queryHint="@string/buscaEstabelecimento"
+            android:background="@drawable/fundo_degrade"
             android:iconifiedByDefault="false"
             android:focusable="true"
             android:focusableInTouchMode="true">
