--- a/app/src/main/res/layout/activity_calendario_vacinas.xml
+++ b/app/src/main/res/layout/activity_calendario_vacinas.xml
@@ -15,8 +15,10 @@ tools:context="projetaobcc20172.com.projetopetemfoco.activity.CalendarioVacinasA
     <ListView
         android:id="@+id/lv_vacinas"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="8dp"
+        android:divider="@drawable/list_divider"
+        android:dividerHeight="1dp"
         android:layout_below="@+id/tb_main"
         android:layout_above="@+id/ll_main">
 
