--- a/app/src/main/res/layout/activity_editar_pet.xml
+++ b/app/src/main/res/layout/activity_editar_pet.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="0dp"
     android:background="@drawable/fundo_degrade"
     tools:context="projetaobcc20172.com.projetopetemfoco.activity.EditarPetActivity">
 
@@ -19,8 +18,7 @@
         android:layout_below="@+id/tb_editar_pet"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingRight="@dimen/activity_horizontal_margin">
 
         <ScrollView
             android:id="@+id/scrollViewEditarPet"
@@ -31,12 +29,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginTop="2dp" />
 
                 <TextView
                     android:id="@+id/tvEditarNomePet"
@@ -167,8 +159,20 @@
                         android:id="@+id/rbEditarFemea"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text = "@string/femea"
-                        />
+                        android:text = "@string/femea"/>
+
+                    <Button
+                        android:id="@+id/bEditarFoto"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:background="@drawable/cornersbuttonfoto"
+                        android:padding="7dp"
+                        android:textSize="15dp"
+                        android:textColor="@color/preto"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:text="Selecione uma foto"/>
+
                 </RadioGroup>
 
                 <View
@@ -177,14 +181,33 @@
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp" />
 
-                <TextView
-                    android:id="@+id/tvEditarRaçaPet"
-                    android:layout_width="fill_parent"
+                <LinearLayout
+                    android:orientation="horizontal"
                     android:layout_height="wrap_content"
-                    android:layout_margin="6dp"
-                    android:text="@string/prompt_raca_pet"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textStyle="bold" />
+                    android:layout_width="match_parent">
+
+                    <TextView
+                        android:id="@+id/tvEditarRaçaPet"
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="6dp"
+                        android:text="@string/prompt_raca_pet"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tvRemoverFotoPet"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="40dp"
+                        android:layout_margin="6dp"
+                        android:textSize="13dp"
+                        android:layout_gravity="center"
+                        android:text="@string/prompt_remover_imagem_pet"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
 
                 <EditText
                     android:id="@+id/etEditarRaçaPet"
@@ -233,9 +256,12 @@
 
                 <Button
                     android:id="@+id/botao_editar_pet"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/shapebutton"
+                    android:paddingRight="40dp"
+                    android:paddingLeft="15dp"
+                    android:drawableLeft="@drawable/ic_action_check"
                     android:text="@string/editar" />
 
             </LinearLayout>
