--- a/app/src/main/res/layout/lista_itens_vacina.xml
+++ b/app/src/main/res/layout/lista_itens_vacina.xml
@@ -5,40 +5,32 @@
     android:descendantFocusability="blocksDescendants"
     android:orientation="vertical">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:padding="3dp"
+        android:layout_width="66dp"
+        android:layout_height="66dp"
+        app:civ_border_width="1dp"
+        android:src="@drawable/ic_action_vacinacao"
+        app:civ_border_color="@color/colorPrimary"/>
+
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/tvTitulo"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_marginLeft="80dp"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textSize="20sp"
         android:paddingTop="8dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp" />
-
-        <ImageButton
-            android:id="@+id/ibtnRemover"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/ic_action_remove"
-            android:gravity="center"/>
-
-        <ImageButton
-            android:id="@+id/ibtnEditar"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="70dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/ic_action_edit"
-            android:gravity="center"/>
 
     <TextView
         android:id="@+id/tvSubtitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="80dp"
         android:layout_below="@+id/tvTitulo"
         android:textColor="@android:color/black"
         android:textSize="14sp"
