--- a/app/src/main/res/layout/activity_filtro_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_filtro_estabelecimento.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="@drawable/fundo_degrade">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,6 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:background="@drawable/shapebutton"
             android:text="Salvar" />
 
     </LinearLayout>
