--- a/app/src/main/res/layout/activity_lista_servicos.xml
+++ b/app/src/main/res/layout/activity_lista_servicos.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="@drawable/fundo_degrade">
 
     <include
         android:id="@+id/tbBuscaServicos"
@@ -16,13 +17,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tbBuscaServicos"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:divider="@drawable/list_divider"
+        android:dividerHeight="1dp" />
 
     <Button
         android:id="@+id/btnFiltroServico"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="@drawable/shapebutton"
         android:text="Filtro" />
 
 </RelativeLayout>
