--- a/app/src/main/res/layout/busca_servico_fragment.xml
+++ b/app/src/main/res/layout/busca_servico_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="@drawable/fundo_degrade">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/gridServicos"
+            android:background="@drawable/shapebutton"
             android:text="Filtro" />
 
     </LinearLayout>
