--- a/app/src/main/res/layout/lista_itens_servicos_busca.xml
+++ b/app/src/main/res/layout/lista_itens_servicos_busca.xml
@@ -11,6 +11,7 @@
         android:layout_alignBottom="@+id/tvExibirServicoValor"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginLeft="2dp"
         app:srcCompat="@drawable/servico_passeio" />
 
     <TextView
@@ -29,7 +30,7 @@
     <TextView
         android:id="@+id/tvEstabServico"
         android:layout_width="wrap_content"
-        android:layout_height="15dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/tvExibirServico"
         android:layout_marginBottom="5dp"
         android:layout_marginStart="8dp"
