--- a/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
@@ -28,22 +28,24 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tvExibeNomeEstabelecimento"
                 android:layout_width="210dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="Estabelecimento"
+                android:gravity="center_vertical"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold" />
 
             <ImageButton
                 android:id="@+id/botao_mostrar_avaliacoes_estabelecimento"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_alignParentRight="true"
+                android:layout_gravity="center_vertical"
                 android:background="@drawable/ic_action_avaliacoes" />
 
             <View
@@ -52,9 +54,10 @@
 
             <ImageButton
                 android:id="@+id/botao_avaliar_estabelecimento"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_alignParentRight="true"
+                android:layout_gravity="center_vertical"
                 android:background="@drawable/ic_action_avaliar" />
 
         </LinearLayout>
