--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
     <color name="azul">#0DFFBB</color>
     <color name="laranja">#E8A80C</color>
     <color name="preto">#000000</color>
-    <color name="branco">#FFFFFF</color>
+    <color name="branco">#ffffff</color>
     <color name="vermelho">#FF0000</color>
     <color name="amarelo">#EAEF92</color>
     <color name="lightsteelblue">#B0C4DE</color>
