--- a/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
@@ -25,6 +25,19 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
+        <Button
+            android:id="@+id/bt_salvar_favorito"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Favoritar" />
+
+        <Button
+            android:id="@+id/bt_remover_favorito"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Desfavoritar"
+            android:visibility="invisible" />
+
         <ScrollView
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
