--- a/app/src/main/res/layout/avaliacao.xml
+++ b/app/src/main/res/layout/avaliacao.xml
@@ -8,65 +8,87 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:background="@color/grey"
+        android:paddingBottom="8dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:paddingTop="8dp"
+        android:background="@drawable/fundo_degrade"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <TextView
-                android:id="@+id/tvUsuarioAvaliador"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/avaliador"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textStyle="normal" />
+
             <TextView
                 android:id="@+id/tvNomeUsuarioAvaliacaoes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Nome"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textStyle="bold" />
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
         </LinearLayout>
 
-        <RatingBar
-            android:id="@+id/rbEstrelaAvaliacoes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:numStars="5"
-            android:layout_gravity="center"
-            android:stepSize="1.0"
-            android:rating="0.0"
-            android:isIndicator="true"
-            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:orientation="vertical">
+
+            <RatingBar
+                android:id="@+id/rbEstrelaAvaliacoes"
+                android:layout_width="wrap_content"
+                android:layout_height="70dp"
+                android:numStars="5"
+                android:layout_gravity="left"
+                android:scaleX="0.5"
+                android:scaleY="0.5"
+                android:transformPivotX="0dp"
+                android:transformPivotY="0dp"
+                android:rating="0.0"
+                android:isIndicator="true"/>
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tvComentarioAvaliacoes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/comentario"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textStyle="bold" />
-            <EditText
-                android:id="@+id/etComentarioAvaliacoes"
+            android:textColor="@android:color/black"
+            android:textSize="16sp"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+        <ScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="left|top"
-                android:inputType="textMultiLine"
-                android:background="@color/branco"
-                android:lines="8"
-                android:scrollbars="vertical"
-                android:maxLines="7"
-                android:minLines="2"
-                android:focusable="false"
-                />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <EditText
+                    android:id="@+id/etComentarioAvaliacoes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:gravity="left|top"
+                    android:inputType="textMultiLine"
+                    android:background="@drawable/cornersbutton"
+                    android:lines="8"
+                    android:padding="7dp"
+                    android:scrollbars="vertical"
+                    android:maxLines="10"
+                    android:minLines="2"
+                    android:focusable="false" />
+
+            </LinearLayout>
+
+        </ScrollView>
+
     </LinearLayout>
+
 </RelativeLayout>
