Correções sugeridas pelo codacy
Merge branch 'master' of https://github.com/dariofrazao/projetopetemfoco into alexsandro

# Conflicts:
#	app/src/main/java/projetaobcc20172/com/projetopetemfoco/adapter/ServicoAdapterListView.java
#	app/src/main/res/layout/lista_itens_servicos_busca.xml

--- a/app/src/main/res/layout/lista_itens_servicos_busca.xml
+++ b/app/src/main/res/layout/lista_itens_servicos_busca.xml
@@ -54,6 +54,14 @@
         android:textColor="@color/colorSecondaryText"
         android:textSize="16sp" />
 
+    <View
+        android:layout_width="10dp"
+        android:layout_height="50dp"
+        android:layout_alignBottom="@+id/tvExibirDist"
+        android:layout_below="@+id/tvExibirNota"
+        android:layout_toEndOf="@+id/tvExibirDist"
+        android:id="@+id/view" />
+
     <TextView
         android:id="@+id/tvExibirNota"
         android:layout_width="wrap_content"
@@ -63,18 +71,6 @@
         android:text="nota"
         android:textColor="@color/colorSecondaryText"
         android:textSize="16sp" />
-
-
-
-    <ImageView
-        android:id="@+id/ivPetServicoBusca"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignBottom="@+id/tvEstabServico"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="84dp"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/tipo_pet_gato" />
 
     <TextView
         android:id="@+id/tvExibirServicoValor"
